# grader

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: file.hpp  logger.hpp  script.hpp  submission.hpp  task.hpp
include/grader/: grader.hpp  grader_pool.hpp  submission_pool.hpp
src/: file.cpp  script.cpp  submission.cpp  task.cpp
src/cli/: grader.cpp
src/grader/: grade_script.cpp  grader.cpp  grader.hpp  grader_pool.cpp  grader_pool.hpp  main.cpp  submission_pool.cpp  submission_pool.hpp
src/rest/: grader.cpp  router.cpp  router.hpp
src/sandbox/: grade_script.cpp  grade_script.hpp  group.cpp  group.hpp  run.cpp  run.hpp  sandbox.cpp  single_run.cpp  single_run.hpp  submission_config.cpp  submission_config.hpp  test_result.cpp  test_result.hpp  utility.hpp
src/sandbox/run/: equal_string.cpp  equal_string.hpp  run.cpp  run.hpp  run_list.cpp  run_list.hpp  run_sandbox.cpp
src/sandbox/test/: 1-second.sh
src/setup/: setup.cpp
src/task-manager/: install.cpp  task-manager.cpp  task-manager.hpp
test/: grader.cpp  grader_pool.cpp  main.cpp  setup.cpp  submission.cpp  submission.hpp  task.cpp
test/grader/: grader_pool.cpp
test/sample-submission/: config.yaml  solution.cpp
test/sample-task/: config.yaml  generator.py  grade.yaml
test/setup/: setup.hpp
